--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 coremods=org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin
-
+deps=
 
 version_minecraft=1.12.2
 version_forge=14.23.5.2860
