Fixes Divine-Journey-2|Divine-Journey-2#717.

--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,10 @@ dependencies {
 	
 	// **TWEAKS**
 	deobfProvided(
+			"curse.maven:RFTools-224641:2861573"
+	)
+	
+	deobfProvided(
 			"curse.maven:Forgelin-248453:2785465",
 			"curse.maven:TeslaCoreLib-254602:3438487",
 			"curse.maven:IndustrialForegoing-266515:2745321"
@@ -131,18 +135,16 @@ dependencies {
 	)
 	
 	
-	deobfProvided(
-			"curse.maven:EnderIO-64578:3328811",
-			"curse.maven:ProjectIntelligence-306028:2833640",
-			"curse.maven:EnderCore-231868:2972849",
-			"curse.maven:BrandonsCore-231382:3408276",
-			"curse.maven:CodeChickenLib-242818:2779848"
-	)
-	compile "cofh:RedstoneFlux:1.12-2.0.0.1:universal"
+//	deobfProvided(
+//			"curse.maven:EnderIO-64578:3328811",
+//			"curse.maven:ProjectIntelligence-306028:2833640",
+//			"curse.maven:EnderCore-231868:2972849",
+//			"curse.maven:BrandonsCore-231382:3408276",
+//			"curse.maven:CodeChickenLib-242818:2779848"
+//	)
+//	compile "cofh:RedstoneFlux:1.12-2.0.0.1:universal"
 	
 	deobfProvided("curse.maven:AppleSkin-248787:2987247")
-	
-	
 	
 	deobfProvided(
 			"curse.maven:ModularMachinery-270790:2713714",
@@ -152,11 +154,11 @@ dependencies {
 	
 	deobfProvided("curse.maven:Aether-255308:3280119")
 	
-	deobfProvided(
-			"curse.maven:Evilcraft-74610:2811267",
-			"curse.maven:CyclopsCore-232758:3159497"
-	)
-	
+//	deobfProvided(
+//			"curse.maven:Evilcraft-74610:2811267",
+//			"curse.maven:CyclopsCore-232758:3159497"
+//	)
+//
 	
 	deobfProvided("curse.maven:PackagedAuto-308380:3614585")
 	
@@ -216,8 +218,6 @@ processResources {
 jar {
 	manifest {
 		attributes(
-				
-				
 				"FMLCorePluginContainsFMLMod": "true",
 //                "FMLCorePlugin"              : coremods,
 				"TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
