Aerogel is now patched more robustly on servers without TickProfiler installed.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-coremods=org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin
+coremods=org.btpos.dj2addons.core.DJ2ALoadingPlugin
 deps=
 
 version_minecraft=1.12.2
