Revised ZenDoc tool. Added documentation for infusion stabilizers.

--- a/build.gradle
+++ b/build.gradle
@@ -188,8 +188,7 @@ dependencies {
 	
 	// Dev Tools
 	testImplementation( // For ZenDoc
-			"org.reflections:reflections:0.10.2",
-			"curse.maven:Roots-246183:3484394"
+			"org.reflections:reflections:0.10.2"
 	)
 }
 
