--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,17 @@ subprojects {
 //	}
 //
 	
+	repositories {
+		mavenCentral()
+	}
+	
 	dependencies {
 		implementation 'org.spongepowered:mixin:0.8.5'
+		testImplementation     "org.junit.jupiter:junit-jupiter-api:5.2.0"
+		testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
+		testCompile("org.junit.platform:junit-platform-launcher:1.1.0")
+		testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+		
 	}
 	
 	processResources {
