--- a/mod/build.gradle
+++ b/mod/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	
 	implementation("mezz.jei:jei_1.12.2:4.16.1.302")
 	
+	deobfCompile("curse.maven:ActuallyAdditions-228404:3117927")
 	
 	// **CRAFTTWEAKER HOOKS**
 	deobfCompile(
